# deep_analysis_agent

./: .env.example  README.md  pyproject.toml  step.md
src/: main.py
src/agents/: prompts.py
src/context/: compressor.py
src/core/: config.py  graph.py  state.py
src/utils/: doc_parser.py  llm_utils.py
