[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi Agent System Using Langgraph with Context Compression and Harness"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "deepeval>=4.0.7", # LLM 评估框架
    "langchain>=1.3.11",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.4", # 可观测性
    "loguru>=0.7.3", # 结构化日志
    "markdown>=3.10.2",
    "matplotlib>=3.11.0", # 可视化
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3", # RAG 评估
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3", # 进度条
]
